--- a/manifest.json
+++ b/manifest.json
@@ -1488,17 +1488,17 @@
         "RemoteHost": "api.github.com",
         "RemoteRepo": "quartohelp",
         "RemoteUsername": "t-kalinowski",
-        "RemoteRef": "polish-app",
-        "RemoteSha": "8a5b1e7ded4985c17bd779b87e3f596f9fe91173",
+        "RemoteRef": "HEAD",
+        "RemoteSha": "b8d647b2ef923ec0d05d74393614864f6b86dcc5",
         "GithubRepo": "quartohelp",
         "GithubUsername": "t-kalinowski",
-        "GithubRef": "polish-app",
-        "GithubSHA1": "8a5b1e7ded4985c17bd779b87e3f596f9fe91173",
+        "GithubRef": "HEAD",
+        "GithubSHA1": "b8d647b2ef923ec0d05d74393614864f6b86dcc5",
         "NeedsCompilation": "no",
-        "Packaged": "2025-11-03 19:38:21 UTC; dfalbel",
+        "Packaged": "2025-11-04 17:04:27 UTC; dfalbel",
         "Author": "Tomasz Kalinowski [aut, cre]",
         "Maintainer": "Tomasz Kalinowski <tomasz@posit.co>",
-        "Built": "R 4.5.0; ; 2025-11-03 19:38:21 UTC; unix"
+        "Built": "R 4.5.0; ; 2025-11-04 17:04:28 UTC; unix"
       }
     },
     "ragnar": {
@@ -1793,7 +1793,7 @@
         "URL": "https://posit-dev.github.io/shinychat/r/,\nhttps://github.com/posit-dev/shinychat",
         "BugReports": "https://github.com/posit-dev/shinychat/issues",
         "Imports": "base64enc, bslib, cli, coro, ellmer (>= 0.3.0), fastmap,\nhtmltools, jsonlite, lifecycle, promises (>= 1.3.2), rlang (>=\n1.1.0), S7, shiny (>= 1.10.0)",
-        "Suggests": "later, testthat (>= 3.0.0), withr",
+        "Suggests": "knitr, later, testthat (>= 3.0.0), withr",
         "Config/Needs/website": "tidyverse/tidytemplate, rmarkdown, weathR, gt,\nglue, bsicons",
         "Config/testthat/edition": "3",
         "Encoding": "UTF-8",
@@ -1804,18 +1804,18 @@
         "RemoteRepo": "shinychat",
         "RemoteUsername": "posit-dev",
         "RemoteRef": "HEAD",
-        "RemoteSha": "3a1824c92f6b18dc2aedb5a7ebc8ddfdd6925246",
+        "RemoteSha": "fd83249c9c52f9c07193d11f44f80debdbb5a7e9",
         "RemoteSubdir": "pkg-r",
         "GithubRepo": "shinychat",
         "GithubUsername": "posit-dev",
         "GithubRef": "HEAD",
-        "GithubSHA1": "3a1824c92f6b18dc2aedb5a7ebc8ddfdd6925246",
+        "GithubSHA1": "fd83249c9c52f9c07193d11f44f80debdbb5a7e9",
         "GithubSubdir": "pkg-r",
         "NeedsCompilation": "no",
-        "Packaged": "2025-10-31 10:03:06 UTC; dfalbel",
+        "Packaged": "2025-11-04 17:04:24 UTC; dfalbel",
         "Author": "Joe Cheng [aut],\n  Carson Sievert [aut],\n  Garrick Aden-Buie [aut, cre] (ORCID:\n    <https://orcid.org/0000-0002-7111-0077>),\n  Barret Schloerke [aut] (ORCID: <https://orcid.org/0000-0001-9986-114X>),\n  Posit Software, PBC [cph, fnd] (ROR: <https://ror.org/03wc8by49>)",
         "Maintainer": "Garrick Aden-Buie <garrick@adenbuie.com>",
-        "Built": "R 4.5.0; ; 2025-10-31 10:03:06 UTC; unix"
+        "Built": "R 4.5.0; ; 2025-11-04 17:04:25 UTC; unix"
       }
     },
     "sourcetools": {
